--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
